--- a/etc/application.ini
+++ b/etc/application.ini
@@ -5,7 +5,7 @@
 static_files = ./
 
 validate_response = True
-db_uri = file:../m-bitbeam/catalog.db?mode=ro
+db_uri = file:{static_files}/data/catalog.db?mode=ro
 
 [logging]
 level = DEBUG
