--- a/etc/uwsgi.ini
+++ b/etc/uwsgi.ini
@@ -16,6 +16,7 @@ module = bitbeam_catalog.main:app
 # check-static = ./web
 master = true
 workers = 2
+queue = 1
 
 # python-autoreload = true
 optimize = 2
