using jinja2 and fix menu

--- a/etc/uwsgi.ini
+++ b/etc/uwsgi.ini
@@ -10,7 +10,6 @@ env = CONFFILE=etc/application.ini
 # plugin = python3
 
 module = bitbeam_catalog.main:app
-# pokud by kubernety nahazovaly existující container
 
 # check-static=/usr/local/share/m-bitbeam_catalog/web
 # check-static = ./web
@@ -18,7 +17,7 @@ master = true
 workers = 2
 queue = 1
 
-# python-autoreload = true
+python-autoreload = true
 optimize = 2
 #limit-as = 32
 
